修复录制403后无法停止获取最新直播链接的bug